2011-03-24  Bill Budge  <bbudge@chromium.org>

Reviewed by Dmitry Titov.

        Add an overloaded WebFrame::createAssociatedURLLoader method that takes WebURLLoaderOptions, so clients can specify CORS options to allow cross-origin requests.
        https://bugs.webkit.org/show_bug.cgi?id=56885

        No new tests. Exposes no new functionality.

        * public/WebFrame.h:
        * src/WebFrameImpl.cpp:
        (WebKit::WebFrameImpl::createAssociatedURLLoader):
        * src/WebFrameImpl.h:

Canonical link: https://commits.webkit.org/71723@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@81913 268f45cc-cd09-0410-ab3c-d52691b4dbfc