Source/WebKit/chromium/src/WebFrameImpl.h
@@ -133,7 +133,9 @@ public:
     virtual bool isViewSourceModeEnabled() const;
     virtual void setReferrerForRequest(WebURLRequest&, const WebURL& referrer);
     virtual void dispatchWillSendRequest(WebURLRequest&);
+    // FIXME: Remove this overload when clients have been changed to pass options.
     virtual WebURLLoader* createAssociatedURLLoader();
+    virtual WebURLLoader* createAssociatedURLLoader(const WebURLLoaderOptions&);
     virtual void commitDocumentData(const char* data, size_t length);
     virtual unsigned unloadListenerCount() const;
     virtual bool isProcessingUserGesture() const;
